--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,7 @@
 	<div id="fh5co-header" style="background-image: url(static/images/polygon.png);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="bio-photo text-center">
-			<a href="index.html"><img src="../static/images/person_2.webp" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+			<a href="index.html"><img src="../static/images/person_2.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 		</div>
 	</div>
 
